--- a/PRACTICA_2/packages/swiper/pubspec.yaml
+++ b/PRACTICA_2/packages/swiper/pubspec.yaml
@@ -1,10 +1,10 @@
 name: swiper
-description: "A new Flutter package project."
+description: "Package animation swiper"
 version: 0.0.1
 homepage:
 
 environment:
-  sdk: '>=3.3.3 <4.0.0'
+  sdk: ">=3.3.3 <4.0.0"
   flutter: ">=1.17.0"
 
 dependencies:
