--- a/PRACTICA_3/auth_firebase_app/pubspec.yaml
+++ b/PRACTICA_3/auth_firebase_app/pubspec.yaml
@@ -35,9 +35,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  firebase_core: ^3.3.0
-  firebase_auth: ^5.1.4
+  firebase_core: ^2.24.2
+  firebase_auth: ^4.16.0
   riverpod: ^2.5.1
+  flutter_riverpod: ^2.5.1
+  http: ^1.2.2
+  go_router: ^14.2.3
 
 dev_dependencies:
   flutter_test:
